# resumex

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
examples/: resume.yaml
my-custom-theme/: theme.yaml
my-custom-theme/templates/: main.tex.j2
